Minor edits to link regex and add dependency name

--- a/Bonobo.Git.Server/Views/Repository/Edit.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Edit.cshtml
@@ -92,8 +92,8 @@ else
        {
            @onClick = "document.getElementById('LinksRegex').disabled = this.checked; " +
  "document.getElementById('LinksUrl').disabled =  this.checked; " +
- "document.getElementById('LinksRegex').disabled? document.getElementById('LinksRegex').value = '': ''; " +
- "document.getElementById('LinksUrl').disabled? document.getElementById('LinksUrl').value = '': '';"
+ "document.getElementById('LinksRegex').disabled? document.getElementById('LinksRegex').value = '': document.getElementById('LinksRegex').value = ''; " +
+ "document.getElementById('LinksUrl').disabled? document.getElementById('LinksUrl').value = '': document.getElementById('LinksUrl').value = '';"
        })
         </div>
         <div class="pure-control-group">
