--- a/Bonobo.Git.Server/Views/Repository/Create.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Create.cshtml
@@ -51,7 +51,12 @@
         </div>
         <div class="pure-control-group">
             @Html.LabelFor(m => m.LinksUseGlobal)
-            @Html.CheckBoxFor(m => m.LinksUseGlobal, new { @onClick = "document.getElementById('LinksRegex').disabled = this.checked; document.getElementById('LinksUrl').disabled = this.checked" })
+            @Html.CheckBoxFor(m => m.LinksUseGlobal, new {
+           @onClick = "document.getElementById('LinksRegex').disabled = this.checked; " +
+ "document.getElementById('LinksUrl').disabled =  this.checked; " +
+ "document.getElementById('LinksRegex').disabled? document.getElementById('LinksRegex').value = '': document.getElementById('LinksRegex').value = ''; " +
+ "document.getElementById('LinksUrl').disabled? document.getElementById('LinksUrl').value = '': document.getElementById('LinksUrl').value = '';"
+       })
         </div>
         <div class="pure-control-group">
             @Html.LabelFor(m => m.LinksRegex)
