Fixes css for table headers now there fixed and look better

--- a/Bonobo.Git.Server/Views/Repository/Create.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Create.cshtml
@@ -106,8 +106,8 @@
         </legend>
         <table class="pure-table" id="service-account-table">
             <tr class="row">
-                <th class="col">@Resources.ServiceAccount_Name</th>
-                <th class="col">@Resources.ServiceAccount_PassLastUpdated</th>
+                <th class="col header-name">@Resources.ServiceAccount_Name</th>
+                <th class="col header-field-2">@Resources.ServiceAccount_PassLastUpdated</th>
                 <th class="col">@Resources.ServiceAccount_InPassManager</th>
             </tr>
         </table>
@@ -121,8 +121,8 @@
         </legend>
             <table class="pure-table" id="dependencies-table">
                 <tr>
-                    <th>@Resources.Account_Create_Name</th>
-                    <th>@Resources.Dependencies_VersionInUse</th>
+                    <th class="header-name">@Resources.Account_Create_Name</th>
+                    <th class="header-field-2">@Resources.Dependencies_VersionInUse</th>
                     <th>@Resources.Dependencies_DateUpdated</th>
                 </tr>
             </table>
