--- a/Bonobo.Git.Server/Content/Site.css
+++ b/Bonobo.Git.Server/Content/Site.css
@@ -255,3 +255,10 @@ h2.group .toggle.on:after { content: "\f055"; }
 img.repo-logo { width:36px; height: auto; image-rendering: -moz-crisp-edges; image-rendering: -webkit-optimize-contrast; image-rendering: crisp-edges; -ms-interpolation-mode: nearest-neighbor; }
 
 .copy-to-clip-button {font-size: 12px; padding: 4px; }
+
+.header-name {
+    width: 37%;
+}
+.header-field-2{
+    width: 30%;
+}
