--- a/Bonobo.Git.Server/Views/Repository/Create.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Create.cshtml
@@ -149,7 +149,7 @@
                         </select>
                         <div class="pure-control-group new-known-dependency" id="newKD-Dependencies_{i}__KnownDependenciesId">
                             <input class="pure-form valid field-width" id="KDInputDependencies_{i}__KnownDependenciesId" type="text">
-                            <button class="return-to-dropdown rem-btn" type="button" id="{i}" onclick="returnToDropdownFromKDInput(this.id)" title="Return to dropdown" ><i class="fa fa-times-circle"></i></button>
+                            <button class="return-to-dropdown rem-btn" type="button" id="{i}" onclick="returnToDropdownFromKDInput(this.id)" title="Return to dropdown" ><i class="fa fa-arrow-left"></i></button>
                         </div>
                     </th>
                     <th class="col pure-control-group">
